  * JSONRPC* and Apache::JSONRPC are deleted from the distribution!
     Please check JSON::RPC (supports JSON-RPC protocol v1.1 and 1.0).

##########################################################################

 !! Since 2.16, PP's relaxed option caused an infinite loop in some condition.
 !! Recommend to update old versions.

2.21_001  Thu Aug 19 16:52:43 2010
	[JSON]
	- added JSON::XS installing feature in Makefile.PL
	[JSON::PP]
	- modified for -Duse64bitall -Duselongdouble compiled perl.
	    11_pc_expo.t too. (these are patched by H.Merijn Brand)

2.21  Mon Apr  5 14:56:52 2010
	[JSON]
	- enhanced 'HOW DO I DECODE A DATA FROM OUTER AND ENCODE TO OUTER'
	- renamed eg/bench_pp_xs.pl to eg/bench_decode.pl
	- added eg/bench_encode.pl

2.20  Fri Apr  2 12:50:08 2010
	[JSON]
	- added eg/bench_pp_xs.pl for benchmark sample
	- updated 'INCREMENTAL PARSING' section
	[JSON::PP]
	- decode_prefix() didn't count a consumed text length properly.
	- enhanced XS compatibilty
	    in the case of decoding a white space garbaged text.

2.19  Tue Mar 30 13:40:24 2010
	[JSON]
	- fixed typo (rt#53535 by Angel Abad)
	- added a recommendation
              refering to (en|de)code_json to pod (suggested by tokuhirom)
	- added 'HOW DO I DECODE A DATA FROM OUTER AND ENCODE TO OUTER' to pod.

2.18  Tue Mar 23 15:18:10 2010
	[JSON]
	- updated document (compatible with JSON::XS 2.29)
	[JSON::PP]
	- fixed encode an overloaded 'eq' object bug (reported by Alexey A. Kiritchun)
	- enhanced an error message compatible to JSON::XS

2.17  Thu Jan  7 12:23:13 2010
	[JSON]
	- fixed a problem caused by JSON::XS backend and support_by_pp option
	  (rt#52842,  rt#52847 by ikegami)
	[JSON::PP]
	- made compatible with JSON::XS 2.27
	- patched decode for incr_parse (rt#52820 by ikegami)
	- relaxed option caused an infinite loop in some condition.

2.16  Fri Oct 16 15:07:37 2009
	[JSON][JSON::PP]
	- made compatible with JSON::XS 2.26
            *indent adds a final newline